project/test/semantics/unit/bad/Bad02_shouldNotSeeLocalFunctionEnvOutsideIt.ty
immutable class SomeDummyInstantiableClass {
    
    values: {
        someDummyAttribute: Int = 3;
        anotherDummyAttribute: Int;
    }
    
    functions: {
        someDummyFunction: () -> Int = {
            2 * result
        } with values: {
            result: Int = 22;
        }
    }
}

singleton class Methods {
    
    actions: {
        main: () -> Int = {
            value worker: SomeDummyInstantiableClass = SomeDummyInstantiableClass(5);
            worker.someDummyFunction()
            result
        }
    }
}
